sensor: adxl345: DTS: add binding for FIFO interrupts
Add a dedicated devicetree binding to configure the interrupt line, INT1 or
INT2, used for FIFO events. FIFO events can be data ready, watermark or
overrun.

Signed-off-by: Lothar Rubusch <l.rubusch@gmail.com>

--- a/dts/bindings/sensor/adi,adxl345-common.yaml
+++ b/dts/bindings/sensor/adi,adxl345-common.yaml
@@ -52,3 +52,12 @@ properties:
       The INT2 signal defaults to active high as produced by the
       sensor.  The property value should ensure the flags properly
       describe the signal that is presented to the driver.
+
+  drdy-pin:
+    type: int
+    enum: [1, 2]
+    description: |
+      This property selects the interrupt line (INT1 or INT2) used to deliver
+      the data ready signal, if enabled.
+      - 1
+      - 2
