--- a/tests/bluetooth/tester/boards/rd_rw612_bga.conf
+++ b/tests/bluetooth/tester/boards/rd_rw612_bga.conf
@@ -20,3 +20,5 @@ CONFIG_BT_SMP_ENFORCE_MITM=y
 # CONFIG_LOG_MODE_IMMEDIATE=y
 # CONFIG_LOG=y
 # CONFIG_LOG_DEFAULT_LEVEL=4
+
+CONFIG_BTTESTER_BTP_CMD_THREAD_STACK_SIZE=2560
