usb: device_next: use k_event instead of msg_q
USBD_MAX_UDC_MSG configures the number of events coming from the UDC
driver that the stack can keep. This can be filled very quickly on high
speed devices, and subsequent events would be dropped. It seems that
only endpoint events, which are net_bufs, need to be queued, and we can
use single linked lists for that. Then, we can replace msg_q with
k_event. Likely, some work is needed to filter bus events, as now the
stack may see them simultaneously.

Signed-off-by: Johann Fischer <johann.fischer@nordicsemi.no>

--- a/subsys/usb/device_next/Kconfig
+++ b/subsys/usb/device_next/Kconfig
@@ -5,6 +5,7 @@
 menuconfig USB_DEVICE_STACK_NEXT
 	bool "New USB device stack"
 	select UDC_DRIVER
+	select EVENTS
 	imply HWINFO
 	help
 	  New USB device stack.
@@ -66,12 +67,6 @@ config USBD_THREAD_STACK_SIZE
 	default 1024
 	help
 	  USB device stack thread stack size in bytes.
-
-config USBD_MAX_UDC_MSG
-	int "Maximum number of UDC events"
-	default 10
-	help
-	  Maximum number of USB device controller events that can be queued.
 
 config USBD_MSG_DEFERRED_MODE
 	bool "Execute message callback from system workqueue"
