samples: sysbuild: with mcu_boot on the stm32u5 with octoSPI
Run the sample to execute in place on the external flash of the
b_u585i_iot02a variant 'ext_flash_app' disco kit,
with_boot application is built and linked for the external flash

Signed-off-by: Francois Ramu <francois.ramu@st.com>

--- a/samples/sysbuild/with_mcuboot/sample.yaml
+++ b/samples/sysbuild/with_mcuboot/sample.yaml
@@ -16,6 +16,7 @@ tests:
       - esp32c6_devkitc/esp32c6/hpcore
       - nucleo_h7s3l8
       - nucleo_u385rg_q
+      - b_u585i_iot02a/stm32u585xx/ext_flash_app
       - stm32h7s78_dk
       - stm32h573i_dk
     integration_platforms:
