--- a/boards/st/b_u585i_iot02a/b_u585i_iot02a-common.dtsi
+++ b/boards/st/b_u585i_iot02a/b_u585i_iot02a-common.dtsi
@@ -176,6 +176,8 @@ stm32_lp_tick_source: &lptim1 {
 		data-rate = <OSPI_DTR_TRANSFER>;
 		four-byte-opcodes;
 		status = "okay";
+
+		/* The partition of the external NOR is defined in each board variant. */
 	};
 };
 
