--- a/west.yml
+++ b/west.yml
@@ -200,7 +200,7 @@ manifest:
       groups:
         - hal
     - name: hal_nordic
-      revision: 2c0fd06a98bb9b89ac234b75b2c217742f0df1ba
+      revision: pull/309/head
       path: modules/hal/nordic
       groups:
         - hal
