drivers: hwspinlock: sqn: add reg-width dts property
The size of each spinlock register might vary depending on the SoC.
Make it configurable in the devicetree.

Signed-off-by: Pierrick Guillaume <pguillaume@fymyte.com>

--- a/dts/bindings/hwspinlock/sqn,hwspinlock.yaml
+++ b/dts/bindings/hwspinlock/sqn,hwspinlock.yaml
@@ -15,5 +15,20 @@ properties:
     type: int
     required: true
 
+  reg-width:
+    type: int
+    enum:
+      - 1
+      - 2
+      - 4
+    required: true
+    description: |
+      Register width for a single spinlock in bytes.
+      Depending on the platform, the register used to write the cluster identifier
+      may vary in size.
+        - 1: cluster id register fit in a single byte
+        - 2: cluster id register span across 2 bytes
+        - 4: cluster id register span across 4 bytes
+
 hwlock-cells:
   - id
