--- a/boards/arm/mps4/mps4_corstone315_fvp_ns.dts
+++ b/boards/arm/mps4/mps4_corstone315_fvp_ns.dts
@@ -68,6 +68,35 @@
 		zephyr,memory-region = "ISRAM";
 	};
 
+	/* The DDR4 node and zephyr,memory-region follow the naming convention
+	 * ddr4_$IDAUID_$SECURITY_FLAG except for the default region of board
+	 * which is named as "DDR4" to be compatible with existing
+	 * samples/tests that expect DDR4 node and region to be of the same name.
+	 */
+	ddr4: memory@60000000 {
+		compatible = "zephyr,memory-region";
+		reg = <0x60000000 DT_SIZE_M(256)>;
+		zephyr,memory-region = "DDR4";
+	};
+
+	ddr4_8_ns: memory@80000000 {
+		compatible = "zephyr,memory-region";
+		reg = <0x80000000 DT_SIZE_M(256)>;
+		zephyr,memory-region = "DDR4_8_NS";
+	};
+
+	ddr4_a_ns: memory@a0000000 {
+		compatible = "zephyr,memory-region";
+		reg = <0xa0000000 DT_SIZE_M(256)>;
+		zephyr,memory-region = "DDR4_A_NS";
+	};
+
+	ddr4_c_ns: memory@c0000000 {
+		compatible = "zephyr,memory-region";
+		reg = <0xc0000000 DT_SIZE_M(256)>;
+		zephyr,memory-region = "DDR4_C_NS";
+	};
+
 	reserved-memory {
 		#address-cells = <1>;
 		#size-cells = <1>;
