testsuite: coverage: Support semihosting
Use semihosting to collect coverage data instead of dumping data to
serial console.

Signed-off-by: Anas Nashif <anas.nashif@intel.com>

--- a/subsys/testsuite/Kconfig
+++ b/subsys/testsuite/Kconfig
@@ -93,6 +93,12 @@ config COVERAGE_DUMP
 	help
 	  Dump collected coverage information to console on exit.
 
+config COVERAGE_SEMIHOST
+	bool "Use semihosting to write coverage data"
+	depends on SEMIHOST
+	help
+	  Use semihosting to write coverage data to a file on the host.
+
 endchoice
 
 config COVERAGE_DUMP_PATH_EXCLUDE
@@ -105,7 +111,6 @@ config COVERAGE_DUMP_PATH_EXCLUDE
 	  matching.
 
 endif # COVERAGE_GCOV
-
 config FORCE_COVERAGE
 	bool "Force coverage"
 	select HAS_COVERAGE_SUPPORT
