samples: net: midi2: new sample
Add a new sample to demonstrate usage of the newly introduced
Network MIDI 2.0 host stack.

Signed-off-by: Titouan Christophe <titouan.christophe@mind.be>

--- a/subsys/net/lib/midi2/Kconfig
+++ b/subsys/net/lib/midi2/Kconfig
@@ -3,6 +3,7 @@
 
 config NETMIDI2_HOST
 	bool "Network MIDI2 (UDP) host [EXPERIMENTAL]"
+	select EXPERIMENTAL
 	select NET_UDP
 	select NET_SOCKETS
 	select NET_SOCKETS_SERVICE
