--- a/boards/raytac/an54lq_db_15/Kconfig
+++ b/boards/raytac/an54lq_db_15/Kconfig
@@ -2,9 +2,9 @@
 # Copyright (c) 2025 Raytac Corporation.
 # SPDX-License-Identifier: Apache-2.0
 
-# Raytac AN54L15Q-DB board configuration
+# Raytac AN54LQ-DB-15 board configuration
 
-if BOARD_RAYTAC_AN54L15Q_DB_NRF54L15_CPUAPP_NS
+if BOARD_RAYTAC_AN54LQ_DB_15_NRF54L15_CPUAPP_NS
 
 DT_NRF_MPC := $(dt_nodelabel_path,nrf_mpc)
 
@@ -28,4 +28,4 @@ config NRF_TRUSTZONE_RAM_REGION_SIZE
 	  This abstraction allows us to configure TrustZone without depending
 	  on peripheral specific symbols.
 
-endif #BOARD_RAYTAC_AN54L15Q_DB_NRF54L15_CPUAPP_NS
+endif # BOARD_RAYTAC_AN54LQ_DB_15_NRF54L15_CPUAPP_NS
