--- a/boards/raytac/an54lq_db_15/raytac_an54lq_db_15_nrf54l15_cpuapp.dts
+++ b/boards/raytac/an54lq_db_15/raytac_an54lq_db_15_nrf54l15_cpuapp.dts
@@ -8,12 +8,11 @@
 /dts-v1/;
 
 #include <nordic/nrf54l15_cpuapp.dtsi>
-#include "raytac_an54l15q_db_cpuapp_common.dtsi"
+#include "raytac_an54lq_db_15_cpuapp_common.dtsi"
 
 / {
-	compatible = "raytac,an54l15q_db_nrf54l15-cpuapp";
-
-	model = "Raytac AN54L15Q-DB nRF54L15 Application MCU";
+	compatible = "raytac,an54lq_db_15_nrf54l15-cpuapp";
+	model = "Raytac AN54LQ-DB-15 nRF54L15 Application MCU";
 
 	chosen {
 		zephyr,code-partition = &slot0_partition;
