--- a/boards/raytac/an54lq_db_15/raytac_an54lq_db_15_nrf54l15_cpuflpr.dts
+++ b/boards/raytac/an54lq_db_15/raytac_an54lq_db_15_nrf54l15_cpuflpr.dts
@@ -7,11 +7,11 @@
 
 /dts-v1/;
 #include <nordic/nrf54l15_cpuflpr.dtsi>
-#include "raytac_an54l15q_db_common.dtsi"
+#include "raytac_an54lq_db_15_common.dtsi"
 
 / {
-	model = "Raytac AN54L15Q-DB nRF54L15 FLPR MCU";
-	compatible = "raytac,raytac_an54l15q_db_nrf54l15-cpuflpr";
+	model = "Raytac AN54LQ-DB-15 nRF54L15 FLPR MCU";
+	compatible = "raytac,raytac_an54lq_db_15_nrf54l15-cpuflpr";
 
 	chosen {
 		zephyr,console = &uart30;
