--- a/drivers/adc/Kconfig
+++ b/drivers/adc/Kconfig
@@ -136,6 +136,8 @@ source "drivers/adc/Kconfig.gecko"
 
 source "drivers/adc/Kconfig.siwx91x"
 
+source "drivers/adc/Kconfig.silabs"
+
 source "drivers/adc/Kconfig.ifx_cat1"
 
 source "drivers/adc/Kconfig.smartbond"
