--- a/tests/drivers/adc/adc_api/testcase.yaml
+++ b/tests/drivers/adc/adc_api/testcase.yaml
@@ -83,3 +83,30 @@ tests:
       - dma
     platform_allow:
       - esp32s3_devkitc/esp32s3/procpu
+  drivers.adc.dma_silabs:
+    extra_args:
+      - EXTRA_CONF_FILE="overlay-dma-silabs.conf"
+    depends_on:
+      - dma
+    platform_allow:
+      - slwrb4180a
+      - sltb010a
+      - xg23_rb4210a
+      - xg24_rb4187c
+      - xg27_dk2602a
+      - bg29_rb4420a
+      - xg29_rb4412a
+  drivers.adc.dma_silabs_async:
+    extra_args:
+      - EXTRA_CONF_FILE="overlay-dma-silabs.conf"
+      - CONFIG_ADC_ASYNC=y
+    depends_on:
+      - dma
+    platform_allow:
+      - slwrb4180a
+      - sltb010a
+      - xg23_rb4210a
+      - xg24_rb4187c
+      - xg27_dk2602a
+      - bg29_rb4420a
+      - xg29_rb4412a
