drivers: timer: Enable STM32WB0_RADIO_TIMER Kconfig parameter
Use radio timer as the system timer when Bluetooth is used.

Modify CMakeLists.txt to compile radio timer driver when
STM32WB0_RADIO_TIMER is enabled.

Remove the common parts from hci_stm32wb0.c that are present
in the radio timer driver.

Set and retrieve the appropriate value for SYS_CLOCK_TICKS_PER_SEC and
SYS_CLOCK_HW_CYCLES_PER_SEC respectively.

Define radio_timer node and its properties.

Enable radio_timer node in nucleo_wb0x boards.

Signed-off-by: Ali Hozhabri <ali.hozhabri@st.com>

--- a/dts/arm/st/wb0/stm32wb0.dtsi
+++ b/dts/arm/st/wb0/stm32wb0.dtsi
@@ -297,6 +297,13 @@
 		compatible = "st,hci-stm32wb0";
 		status = "disabled";
 	};
+
+	radio_timer: radio_timer {
+		compatible = "st,stm32wb0-radio-timer";
+		compensated-timer-freq = <409600>;
+		max-hs-startup-time = <320>;
+		status = "disabled";
+	};
 };
 
 &nvic {
