--- a/dts/arm/st/wb0/stm32wb0.dtsi
+++ b/dts/arm/st/wb0/stm32wb0.dtsi
@@ -33,7 +33,23 @@
 		cpu0: cpu@0 {
 			device_type = "cpu";
 			compatible = "arm,cortex-m0+";
+			cpu-power-states = <&deepstop>;
 			reg = <0>;
+		};
+
+		power-states {
+			deepstop: state0 {
+				compatible = "zephyr,power-state";
+				power-state-name = "suspend-to-ram";
+				substate-id = <0>;
+
+				/* One milisecond seems reasonable for now. */
+				min-residency-us = <1000>;
+
+				/* exit-latency-us property is not needed
+				 * since the same concept is applied by the hardware automatically.
+				 */
+			};
 		};
 	};
 
