--- a/dts/arm/realtek/ec/rts5912.dtsi
+++ b/dts/arm/realtek/ec/rts5912.dtsi
@@ -275,7 +275,7 @@
 			compatible = "ns16550";
 			reg = <0x40010100 0x100>;
 			reg-shift = <2>;
-			clock-frequency = <25000000>;
+			clock-frequency = <DT_FREQ_M(100)>;
 			interrupts = <191 0>;
 			status = "disabled";
 		};
@@ -287,6 +287,7 @@
 			clocks = <&sccon RTS5912_SCCON_UART UART0_CLKPWR>;
 			clock-names = "uart0";
 			status = "disabled";
+			uart-dev = <&uart0>;
 		};
 
 		pinctrl: pin-controller@40090000 {
