MAINTAINERS: create a new area for test config yaml files
Create a new area for test configuration yaml files, so that any changes
to them get reviewed by collaborators who have a good level of
familiarity with Twister, test scenarios' filtering/selection...

Signed-off-by: Abderrahmane JARMOUNI <git@jarmouni.me>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -4838,6 +4838,22 @@ Task Watchdog:
   tests:
     - sample.task_wdt
 
+Test Configuration Files:
+  status: odd fixes
+  collaborators:
+    - gchwier
+    - hakehuang
+    - JarmouniA
+    - KamilxPaszkiet
+    - LukaszMrugala
+    - nashif
+    - PerMac
+  files-regex:
+    - ^samples/.*/sample.yaml$
+    - ^tests/.*/testcase.yaml$
+  labels:
+    - "area: Testing"
+
 Test Framework (Ztest):
   status: maintained
   maintainers:
