drivers: spi: Introduce SC18IS606 SPI bridge driver
Added the driver implementation and Kconfig choices

Signed-off-by: Zacck Osiemo <coderv63@gmail.com>

--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -122,6 +122,7 @@ source "drivers/spi/Kconfig.mec5"
 source "drivers/spi/Kconfig.npcx"
 source "drivers/spi/Kconfig.nrfx"
 source "drivers/spi/Kconfig.numaker"
+source "drivers/spi/Kconfig.sc18is606"
 source "drivers/spi/Kconfig.nxp_s32"
 source "drivers/spi/Kconfig.oc_simple"
 source "drivers/spi/Kconfig.omap"
