tests: spi: include correct overlay for sc18is606
Apply correct device tree overlay is applied for SC18IS606

Signed-off-by: Zacck Osiemo <coderv63@gmail.com>

--- a/dts/bindings/spi/nxp,sc18is606-spi.yaml
+++ b/dts/bindings/spi/nxp,sc18is606-spi.yaml
@@ -1,24 +1,22 @@
 description: |
-  SC18IS60S6 I2C to SPI Bridge with Selectable GPIOs
+  SPI device through NXP SC18IS606 I2C to SPI Bridge.
 
 compatible: "nxp,sc18is606-spi"
 include: spi-controller.yaml
 properties:
-  spi-clock-frequency:
+  frequency:
     type: int
-    required: false
-    default: 1875000
+    default: 1875
     enum:
-      - 1875000
-      - 455000
-      - 115000
-      - 58000
+      - 1875
+      - 455
+      - 115
+      - 58
 
-    description: SPI Clock frequency in Hz
+    description: SPI Clock frequency in KHz
 
   spi-mode:
     type: int
-    required: false
     default: 0
     enum:
       - 0
