--- a/tests/drivers/build_all/spi/testcase.yaml
+++ b/tests/drivers/build_all/spi/testcase.yaml
@@ -4,11 +4,7 @@ common:
     - drivers
     - spi
 tests:
-  drivers.spi.build:
-    # will cover drivers i2c based drivers
-    platform_allow: native_sim
-    tags: spi_nxp_sc18is606
-    extra_args: "CONFIG_GPIO=y"
+  drivers.spi.build.spi_cdns:
     # will cover drivers without in-tree boards
     platform_allow: qemu_cortex_m3
     tags: spi_cdns
