--- a/subsys/usb/common/CMakeLists.txt
+++ b/subsys/usb/common/CMakeLists.txt
@@ -2,3 +2,4 @@
 # SPDX-License-Identifier: Apache-2.0
 
 zephyr_include_directories(include)
+zephyr_library_sources_ifdef(CONFIG_USB_COMMON_UVC usb_common_uvc.c)
