cpu_freq: Add SMP support
Extends the CPU frequency scaling to support SMP for two models.

Model 1: Each CPU/core can have its frequency scaled independently
of the others.

Model 2: All CPUs/cores use the same frequency scaling.

In both models, IPIs are sent from the timer handler to each of the
CPUs to obtain the most up-to-date CPU load information. For the
first model, each CPU sets its next P-state after determining its
load. For the second model, the next P-state is set by the last
CPU/core to determine its load and is based on the CPU/core with the
highest load.

Signed-off-by: Peter Mitsis <peter.mitsis@intel.com>

--- a/subsys/cpu_freq/Kconfig
+++ b/subsys/cpu_freq/Kconfig
@@ -11,7 +11,6 @@ config HAS_CPU_FREQ
 menuconfig CPU_FREQ
 	bool "CPU Frequency Scaling Subsystem"
 	select EXPERIMENTAL
-	depends on !SMP
 	help
 	  CPU Frequency scaling subsystem
 
@@ -27,6 +26,15 @@ config CPU_FREQ_INTERVAL_MS
 	help
 	  Controls the interval (in milliseconds) at which the CPU Frequency
 	  subsystem runs and evaluates the current policy.
+
+config CPU_FREQ_PER_CPU_SCALING
+	bool "Per-CPU frequency scaling"
+	default n
+	depends on SMP
+	help
+	  Enable per-CPU frequency scaling support. If disabled, setting the
+	  P-state will apply to the whole system instead of just the current CPU.
+	  This should be done at the SoC level.
 
 choice CPU_FREQ_POLICY
 	prompt "CPU Frequency Scaling Policy"
