--- a/tests/subsys/modem/modem_cmux/prj.conf
+++ b/tests/subsys/modem/modem_cmux/prj.conf
@@ -6,5 +6,5 @@ CONFIG_NO_OPTIMIZATIONS=y
 CONFIG_MODEM_MODULES=y
 CONFIG_MODEM_CMUX=y
 CONFIG_MODEM_CMUX_MTU=64
-
+CONFIG_MODEM_CMUX_LOG_LEVEL_DBG=y
 CONFIG_ZTEST=y
