drivers: can: mchp_mss: New
Add a CAN driver for Microchip's PolarFire SoC platform.

Signed-off-by: Sebastian Huber <sebastian.huber@embedded-brains.de>

--- a/drivers/can/CMakeLists.txt
+++ b/drivers/can/CMakeLists.txt
@@ -19,6 +19,7 @@ zephyr_library_sources_ifdef(CONFIG_CAN_KVASER_PCI          can_kvaser_pci.c)
 zephyr_library_sources_ifdef(CONFIG_CAN_LOOPBACK            can_loopback.c)
 zephyr_library_sources_ifdef(CONFIG_CAN_MAX32               can_max32.c)
 zephyr_library_sources_ifdef(CONFIG_CAN_MCAN                can_mcan.c)
+zephyr_library_sources_ifdef(CONFIG_CAN_MCHP_MSS            can_mchp_mss.c)
 zephyr_library_sources_ifdef(CONFIG_CAN_MCP2515             can_mcp2515.c)
 zephyr_library_sources_ifdef(CONFIG_CAN_MCP251XFD           can_mcp251xfd.c)
 zephyr_library_sources_ifdef(CONFIG_CAN_MCUX_FLEXCAN        can_mcux_flexcan.c)
