--- a/drivers/can/Kconfig
+++ b/drivers/can/Kconfig
@@ -124,6 +124,7 @@ source "drivers/can/Kconfig.stm32"
 source "drivers/can/Kconfig.mcux"
 source "drivers/can/Kconfig.mcp2515"
 source "drivers/can/Kconfig.mcan"
+source "drivers/can/Kconfig.mchp_mss"
 source "drivers/can/Kconfig.rcar"
 source "drivers/can/Kconfig.numaker"
 source "drivers/can/Kconfig.loopback"
