--- a/samples/subsys/cpu_freq/on_demand/sample.yaml
+++ b/samples/subsys/cpu_freq/on_demand/sample.yaml
@@ -16,7 +16,7 @@ tests:
       type: multi_line
       regex:
         - "^.*<inf> cpu_freq_sample: Starting CPU Freq Subsystem Sample!"
-        - "^.*<dbg> cpu_load_metric: cpu_load_get: Execution cycles: [0-9]+, Total cycles: [0-9]+"
+        - "^.*<dbg> cpu_load_metric: cpu_load_get: CPU[0-9]+ Execution cycles: [0-9]+, Total cycles: [0-9]+"
         - "^.*<dbg> cpu_freq_policy_on_demand: cpu_freq_policy_select_pstate: Current CPU Load: \
            [0-9]+%"
         - "^.*<dbg> cpu_freq_policy_on_demand: cpu_freq_policy_select_pstate: On-Demand Policy: \
