Bluetooth: Controller: Enable OUTPUT_DISASSEMBLY_WITH_SOURCE with LTO
Enable OUTPUT_DISASSEMBLY_WITH_SOURCE when using LTO to help
find the assertion check in the source code corresponding to
the faulting instruction address.

arm-none-eabi-addr2line tool is not able to resolve the
source file and line number when using LTO.

Signed-off-by: Vinayak Kariappa Chettimada <vich@nordicsemi.no>

--- a/samples/bluetooth/hci_uart/overlay-all-bt_ll_sw_split.conf
+++ b/samples/bluetooth/hci_uart/overlay-all-bt_ll_sw_split.conf
@@ -1,3 +1,11 @@
+# Use link time optimization for code size reduction
+CONFIG_ISR_TABLES_LOCAL_DECLARATION=y
+CONFIG_LTO=y
+
+# Generate .lst file, to find HCI h/w error event given PC
+CONFIG_OUTPUT_DISASSEMBLY=y
+CONFIG_OUTPUT_DISASSEMBLY_WITH_SOURCE=y
+
 CONFIG_BT=y
 CONFIG_BT_HCI_RAW=y
 
