--- a/samples/bluetooth/hci_ipc/nrf5340_cpunet_iso-bt_ll_sw_split.conf
+++ b/samples/bluetooth/hci_ipc/nrf5340_cpunet_iso-bt_ll_sw_split.conf
@@ -8,8 +8,13 @@ CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=512
 CONFIG_HEAP_MEM_POOL_SIZE=4096
 CONFIG_CBPRINTF_REDUCED_INTEGRAL=y
 
+# Use link time optimization for code size reduction
 CONFIG_ISR_TABLES_LOCAL_DECLARATION=y
 CONFIG_LTO=y
+
+# Generate .lst file, to find HCI h/w error event given PC
+CONFIG_OUTPUT_DISASSEMBLY=y
+CONFIG_OUTPUT_DISASSEMBLY_WITH_SOURCE=y
 
 CONFIG_BT=y
 CONFIG_BT_HCI_RAW=y
