--- a/samples/bluetooth/hci_uart/overlay-all-bt_ll_sw_split.conf
+++ b/samples/bluetooth/hci_uart/overlay-all-bt_ll_sw_split.conf
@@ -1,9 +1,14 @@
-CONFIG_BT_BUF_EVT_RX_COUNT=16
+CONFIG_BT=y
+CONFIG_BT_HCI_RAW=y
 
-CONFIG_BT_BUF_EVT_RX_SIZE=255
-CONFIG_BT_BUF_ACL_RX_SIZE=255
-CONFIG_BT_BUF_ACL_TX_SIZE=251
+# BT Buffers
 CONFIG_BT_BUF_CMD_TX_SIZE=255
+CONFIG_BT_BUF_EVT_RX_COUNT=16
+CONFIG_BT_BUF_EVT_RX_SIZE=255
+CONFIG_BT_BUF_ACL_TX_COUNT=3
+CONFIG_BT_BUF_ACL_TX_SIZE=251
+CONFIG_BT_BUF_ACL_RX_COUNT_EXTRA=1
+CONFIG_BT_BUF_ACL_RX_SIZE=255
 
 # Host and Controller common dependencies
 CONFIG_BT_EXT_ADV=y
