samples: drivers: watchdog: allow nucleo_h753zi to run in CI
- enable sample to run in CI on nucleo_h753zi.

Signed-off-by: Fabrice DJIATSA <fabrice.djiatsa-ext@st.com>

--- a/samples/drivers/watchdog/sample.yaml
+++ b/samples/drivers/watchdog/sample.yaml
@@ -88,6 +88,7 @@ tests:
       - nucleo_g071rb
       - nucleo_g474re
       - nucleo_h743zi
+      - nucleo_h753zi
       - nucleo_l073rz
       - nucleo_l152re
       - nucleo_u385rg_q
