--- a/tests/drivers/uart/uart_async_api/testcase.yaml
+++ b/tests/drivers/uart/uart_async_api/testcase.yaml
@@ -35,7 +35,9 @@ tests:
     extra_configs:
       - CONFIG_UART_WIDE_DATA=y
     arch_allow: arm
-    platform_allow: nucleo_h743zi
+    platform_allow:
+      - nucleo_h743zi
+      - nucleo_h753zi
     integration_platforms:
       - nucleo_h753zi
   drivers.uart.async_api.nrf_uart:
