tests: posix: device_io: Update tests for working select(), poll()
Update the device_io test suite so that it expects select(), pselect()
and poll() to work on stdio.

Signed-off-by: Jakub Klimczak <jklimczak@internships.antmicro.com>

--- a/tests/posix/device_io/testcase.yaml
+++ b/tests/posix/device_io/testcase.yaml
@@ -12,6 +12,10 @@ tests:
   portability.posix.device_io:
     extra_configs:
       - CONFIG_COMMON_LIBC_MALLOC_ARENA_SIZE=256
+  portability.posix.device_io.tty_stdio:
+    filter: CONFIG_UART_CONSOLE
+    extra_configs:
+      - CONFIG_CONSOLE_SUBSYS=y
   portability.posix.device_io.armclang_std_libc:
     toolchain_allow: armclang
     extra_configs:
