--- a/dts/bindings/led/issi,is31fl3194.yaml
+++ b/dts/bindings/led/issi,is31fl3194.yaml
@@ -54,6 +54,14 @@ compatible: "issi,is31fl3194"
 
 include: ["i2c-device.yaml", "led-controller.yaml"]
 
+properties:
+  enable-gpios:
+    type: phandle-array
+    description: |
+      GPIO connected to the SDB pin.
+      Allows enable/disable of all led channel outputs.
+      The default configuration is active-high.
+
 child-binding:
   properties:
     label:
