Bluetooth: Host: Add bt_taskq workqueue for quick non-blocking tasks
Add a new workqueue bt_taskq specifically designed for quick
non-blocking work items in the Bluetooth subsystem.

Signed-off-by: Aleksander Wasaznik <aleksander.wasaznik@nordicsemi.no>

--- a/subsys/bluetooth/host/CMakeLists.txt
+++ b/subsys/bluetooth/host/CMakeLists.txt
@@ -14,6 +14,7 @@ zephyr_library_sources_ifdef(CONFIG_BT_LONG_WQ          long_wq.c)
 
 if(CONFIG_BT_HCI_HOST)
   zephyr_library_sources(
+    bt_taskq.c
     uuid.c
     addr.c
     buf.c
