--- a/subsys/bluetooth/host/Kconfig
+++ b/subsys/bluetooth/host/Kconfig
@@ -35,6 +35,20 @@ config BT_LONG_WQ_INIT_PRIO
 
 endif # BT_LONG_WQ
 
+config BT_TASKQ_STACK_SIZE_WITH_PROMPT
+	bool "Override BT taskq thread stack size"
+
+config BT_TASKQ_STACK_SIZE
+	int
+	prompt "BT taskq thread stack size" if BT_HCI_TX_STACK_SIZE_WITH_PROMPT
+	default 1024
+
+config BT_TASKQ_THREAD_PRIO
+	int
+	# -1 is the least urgent cooperative priority.
+	# tx_processor() needs a cooperative thread for now.
+	default -1
+
 config BT_HCI_HOST
 	# Hidden option to make the conditions more intuitive
 	bool
