tests: flash: ite: Add M1K test overlay for it515xx_evb
Add a new overlay for testing the M1K flash controller:

it515xx_m1k.overlay (only supported on it515xx_evb)

Update testcase.yaml to include this overlay with DTC_OVERLAY_FILE
and platform_allow accordingly.

example:
west twister -p it515xx_evb -s drivers.flash.common.it515xx_m1k

Signed-off-by: Tim Lin <tim2.lin@ite.corp-partner.google.com>

--- a/tests/drivers/flash/common/testcase.yaml
+++ b/tests/drivers/flash/common/testcase.yaml
@@ -216,3 +216,9 @@ tests:
       - it515xx_evb
     extra_args:
       - DTC_OVERLAY_FILE="./boards/it8xxx2_indirect.overlay"
+  drivers.flash.common.it515xx_m1k:
+    build_only: true
+    platform_allow:
+      - it515xx_evb
+    extra_args:
+      - DTC_OVERLAY_FILE="./boards/it515xx_m1k.overlay"
