dts: st: l5: add sai1 nodes
This change introduces PLLSAI1 and  SAI1 A/B nodes to STM32L5xx series

Signed-off-by: Mario Paja <mariopaja@hotmail.com>

--- a/dts/arm/st/l5/stm32l5.dtsi
+++ b/dts/arm/st/l5/stm32l5.dtsi
@@ -121,6 +121,12 @@
 			compatible = "st,stm32l4-pll-clock";
 			status = "disabled";
 		};
+
+		pllsai1: pllsai1 {
+			#clock-cells = <0>;
+			compatible = "st,stm32l4-pllsai-clock";
+			status = "disabled";
+		};
 	};
 
 	soc {
@@ -736,6 +742,30 @@
 			compatible = "st,stm32-fmc";
 			reg = <0x44020000 0x400>;
 			clocks = <&rcc STM32_CLOCK(AHB3, 0)>;
+			status = "disabled";
+		};
+
+		sai1_a: sai1@40015404 {
+			compatible = "st,stm32-sai";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <0x40015404 0x20>;
+			clocks = <&rcc STM32_CLOCK(APB2, 21)>,
+				 <&rcc STM32_SRC_PLLSAI1_P SAI1_SEL(0)>;
+			dmas = <&dma1 1 37 (STM32_DMA_MODE_NORMAL | STM32_DMA_PRIORITY_HIGH |
+					     STM32_DMA_16BITS)>;
+			status = "disabled";
+		};
+
+		sai1_b: sai1@40015424 {
+			compatible = "st,stm32-sai";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg = <0x40015424 0x20>;
+			clocks = <&rcc STM32_CLOCK(APB2, 21)>,
+				 <&rcc STM32_SRC_PLLSAI1_P SAI1_SEL(0)>;
+			dmas = <&dma1 2 38 (STM32_DMA_MODE_NORMAL | STM32_DMA_PRIORITY_HIGH |
+					     STM32_DMA_16BITS)>;
 			status = "disabled";
 		};
 	};
