hap_ha: initial broadcast_sink
This PR adds the initial base functionality of the broadcast sink.
The functionality is test on a NRF5340 audio.

Signed-off-by: Rasmus Moeller <rslm@demant.com>

--- a/samples/bluetooth/hap_ha/CMakeLists.txt
+++ b/samples/bluetooth/hap_ha/CMakeLists.txt
@@ -9,6 +9,7 @@ target_sources(app PRIVATE
   src/has_server.c
   src/main.c
   src/vcp_vol_renderer.c
+  src/bap_broadcast_snk.c
 )
 
 target_sources_ifdef(CONFIG_HAP_HA_HEARING_AID_BINAURAL app PRIVATE
