--- a/samples/bluetooth/hap_ha/prj.conf
+++ b/samples/bluetooth/hap_ha/prj.conf
@@ -73,4 +73,18 @@ CONFIG_BT_BAS_BLS_IDENTIFIER_PRESENT=y
 CONFIG_BT_BAS_BLS_BATTERY_LEVEL_PRESENT=y
 CONFIG_BT_BAS_BLS_ADDITIONAL_STATUS_PRESENT=y
 
+
+# Broadcast Sink
+CONFIG_BT_OBSERVER=y
+CONFIG_BT_PER_ADV_SYNC=y
+CONFIG_BT_BAP_BROADCAST_SINK=y
+CONFIG_BT_BAP_SCAN_DELEGATOR=y
+CONFIG_BT_BAP_BROADCAST_SNK_SUBGROUP_COUNT=2
+CONFIG_BT_BAP_BROADCAST_SNK_STREAM_COUNT=2
+CONFIG_BT_BAP_BASS_MAX_SUBGROUPS=4
+CONFIG_BT_ISO_RX_BUF_COUNT=4
+CONFIG_BT_ISO_SYNC_RECEIVER=y
+
 CONFIG_LOG=y
+CONFIG_BT_BUF_ACL_RX_SIZE=255
+CONFIG_BT_BUF_ACL_TX_SIZE=251
