hap_ha: initial broadcast_sink
This PR adds the initial base functionality of the broadcast sink.
The functionality is test on a NRF5340 audio.

Signed-off-by: Rasmus Moeller <rslm@demant.com>

--- a/samples/bluetooth/hap_ha/Kconfig
+++ b/samples/bluetooth/hap_ha/Kconfig
@@ -1,5 +1,6 @@
 #
 # Copyright (c) 2022 Codecoup
+# Copyright (c) 2025 Demant A/S
 #
 # SPDX-License-Identifier: Apache-2.0
 #
@@ -48,5 +49,4 @@ config HAP_HA_HEARING_AID_RIGHT
 	bool "Right Ear"
 
 endchoice # HAP_HA_HEARING_AID_LOCATION
-
 endmenu
