video: stm32_dcmi: snapshot recover cleanup
Error recovery code done in callback for both modes.

Timeout fixes/changes in snapshot.  Two different
timeouts.  First is a timeout for the call to dequeue.
Which can return before a snapshot completes.
Additional calls to dequeue will continue to wait
if necessary, for a frame to be received.

A second timeout was added, which can be configured
as parameter to DCMI.  This handles cases where the
snapshot start completes successfully, but does not
return a frame in the prescribed time frame.
It currently defaults to one second.

Signed-off-by: Kurt Eckhardt <kurte@rockisland.com>

--- a/dts/bindings/video/st,stm32-dcmi.yaml
+++ b/dts/bindings/video/st,stm32-dcmi.yaml
@@ -48,7 +48,12 @@ properties:
 
   snapshot-mode:
     type: boolean
-    description: set the driver into snapshot mode, default is off.
+    description: Set DCMI to Snapshot mode, instead of the default Capture mode.
+
+  snapshot-timeout:
+    type: int
+    description: Set capture timeout in microseconds, default is 1000.
+    default: 1000
 
 child-binding:
   child-binding:
