--- a/samples/subsys/task_wdt/sample.yaml
+++ b/samples/subsys/task_wdt/sample.yaml
@@ -1,27 +1,43 @@
 sample:
   name: Task Watchdog Subsytem Sample
 common:
-  harness: console
   tags:
     - task_wdt
-  harness_config:
-    type: multi_line
-    ordered: true
-    regex:
-      - "Task watchdog sample application."
-      - "Control thread started."
-      - "Main thread still alive..."
-      - "Control thread getting stuck..."
-      - "Task watchdog channel 1 callback, thread: control"
-      - "Resetting device...(.*)"
-      - "Task watchdog sample application."
   depends_on: watchdog
   platform_exclude:
     - s32z2xxdc2/s32z270/rtu0
     - s32z2xxdc2/s32z270/rtu1
     - s32z2xxdc2@D/s32z270/rtu0
     - s32z2xxdc2@D/s32z270/rtu1
+
 tests:
   sample.task_wdt:
+    platform_exclude:
+      - apollo510_eb
+      - apollo510_evb
+    harness: console
+    harness_config:
+      type: multi_line
+      ordered: true
+      regex:
+        - "Task watchdog sample application."
+        - "Control thread started."
+        - "Main thread still alive..."
+        - "Control thread getting stuck..."
+        - "Task watchdog channel 1 callback, thread: control"
+        - "Resetting device...(.*)"
+        - "Task watchdog sample application."
     integration_platforms:
       - nucleo_g474re
+
+  sample.task_wdt.multistage:
+    platform_allow:
+      - apollo510_eb
+      - apollo510_evb
+    timeout: 240
+    harness: console
+    harness_config:
+      type: multi_line
+      ordered: false
+      regex:
+        - "\\[HW WDT\\] bark stage reached \\(interrupt\\)"
