--- a/tests/drivers/flash/common/testcase.yaml
+++ b/tests/drivers/flash/common/testcase.yaml
@@ -208,3 +208,11 @@ tests:
       - EXTRA_DTC_OVERLAY_FILE=boards/mx25uw63_low_freq.overlay
     harness_config:
       fixture: gpio_loopback
+  drivers.flash.common.it8xxx2_indirect:
+    build_only: true
+    platform_allow:
+      - it8xxx2_evb
+      - it82xx2_evb
+      - it515xx_evb
+    extra_args:
+      - DTC_OVERLAY_FILE="./boards/it8xxx2_indirect.overlay"
