modules: mbedtls: deprecate MBEDTLS_MD5
- create an ad-hoc Kconfig file to hold all the Mbed TLS Kconfigs that are
  going to be deprecated;
- add Kconfig MBEDTLS_MD5 to the new Kconfig.deprecated file;
- remove usages of mbedtls_md5_xxx() form tests;
- replace CONFIG_MBEDTLS_MD5 with CONFIG_PSA_WANT_ALG_MD5 in the codebase;
- add migration-guide note about this deprecation.

Signed-off-by: Valerio Setti <vsetti@baylibre.com>

--- a/modules/hostap/Kconfig
+++ b/modules/hostap/Kconfig
@@ -167,11 +167,12 @@ choice WIFI_NM_WPA_SUPPLICANT_CRYPTO_BACKEND
 config WIFI_NM_WPA_SUPPLICANT_CRYPTO_ALT
 	bool "Crypto Mbedtls alt support for WiFi"
 	select MBEDTLS
+	select MBEDTLS_PSA_CRYPTO_C
 	select MBEDTLS_CIPHER_MODE_CTR_ENABLED
 	select MBEDTLS_CIPHER_MODE_CBC_ENABLED
 	select MBEDTLS_CIPHER_AES_ENABLED
 	select MBEDTLS_CIPHER_DES_ENABLED
-	select MBEDTLS_MD5
+	select PSA_WANT_ALG_MD5
 	select MBEDTLS_SHA1
 	select MBEDTLS_SHA384
 	select MBEDTLS_ENTROPY_C
