--- a/tests/crypto/mbedtls_psa/testcase.yaml
+++ b/tests/crypto/mbedtls_psa/testcase.yaml
@@ -19,6 +19,12 @@ common:
   tags:
     - mbedtls
     - psa
+  harness: console
+  harness_config:
+    type: multi_line
+    regex:
+      - " PASS - test_generate_random.*"
+      - " PASS - test_md5.*"
 tests:
   crypto.mbedtls_psa.with_entropy_driver:
     filter: CONFIG_CSPRNG_ENABLED
