modules: mbedtls: deprecate MBEDTLS_SHA1
- add Kconfig MBEDTLS_SHA1 to Kconfig.deprecated;
- remove usages of mbedtls_sha1_xxx() form Zephyr codebase;
- replace CONFIG_MBEDTLS_SHA1 with CONFIG_PSA_WANT_ALG_SHA_1;
- add migration-guide note about this deprecation.

Signed-off-by: Valerio Setti <vsetti@baylibre.com>

--- a/modules/hostap/Kconfig
+++ b/modules/hostap/Kconfig
@@ -173,7 +173,7 @@ config WIFI_NM_WPA_SUPPLICANT_CRYPTO_ALT
 	select MBEDTLS_CIPHER_AES_ENABLED
 	select MBEDTLS_CIPHER_DES_ENABLED
 	select PSA_WANT_ALG_MD5
-	select MBEDTLS_SHA1
+	select PSA_WANT_ALG_SHA_1
 	select MBEDTLS_SHA384
 	select MBEDTLS_ENTROPY_C
 	select MBEDTLS_CIPHER
