--- a/samples/net/cloud/mqtt_azure/prj.conf
+++ b/samples/net/cloud/mqtt_azure/prj.conf
@@ -33,7 +33,7 @@ CONFIG_MBEDTLS_ENABLE_HEAP=y
 CONFIG_MBEDTLS_HEAP_SIZE=100000
 CONFIG_MBEDTLS_SSL_MAX_CONTENT_LEN=10240
 CONFIG_MBEDTLS_PEM_CERTIFICATE_FORMAT=y
-CONFIG_MBEDTLS_SHA1=y
+CONFIG_PSA_WANT_ALG_SHA_1=y
 CONFIG_MBEDTLS_SHA384=y
 CONFIG_MBEDTLS_RSA_C=y
 CONFIG_MBEDTLS_PKCS1_V15=y
