MAINTAINERS: Add NhMchp as hal microchip maintainer
Add NhMchp to the list of hal_microchip maintainers.

Signed-off-by: Niyas Hameed <niyas.hameed@microchip.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -5539,6 +5539,7 @@ West:
     - AzharMCHP
     - scottwcpg
     - nandojve
+    - NhMchp
   collaborators:
     - VenkatKotakonda
     - albertofloyd
