modules: mbedtls: deprecate MBEDTLS_SHA256
- add Kconfig MBEDTLS_SHA256 to Kconfig.deprecated;
- remove usages of mbedtls_sha256_xxx() form Zephyr codebase;
- replace CONFIG_MBEDTLS_SHA256 with CONFIG_PSA_WANT_ALG_SHA_256;
- add migration-guide note about this deprecation.

Signed-off-by: Valerio Setti <vsetti@baylibre.com>

--- a/modules/openthread/Kconfig
+++ b/modules/openthread/Kconfig
@@ -170,11 +170,11 @@ endchoice
 
 config OPENTHREAD_MBEDTLS
 	bool
+	select OPENTHREAD_CRYPTO_PSA
 	select MBEDTLS
 	select MBEDTLS_ENABLE_HEAP
 	select MBEDTLS_CIPHER_AES_ENABLED
 	select MBEDTLS_CIPHER_CCM_ENABLED
-	select MBEDTLS_SHA256
 	select MBEDTLS_ENTROPY_C
 	select MBEDTLS_CMAC
 	select MBEDTLS_CIPHER
@@ -319,8 +319,8 @@ config OPENTHREAD_MAC_SOFTWARE_CSMA_BACKOFF_ENABLE
 	  the radio has hardware support for this feature (IEEE802154_HW_CSMA).
 
 config OPENTHREAD_CRYPTO_PSA
-	bool "ARM PSA crypto API"
-	depends on MBEDTLS_PSA_CRYPTO_CLIENT
+	bool
+	select MBEDTLS_PSA_CRYPTO_C if !BUILD_WITH_TFM
 	select OPENTHREAD_PLATFORM_KEY_REF if !OPENTHREAD_COPROCESSOR_RCP
 	imply OPENTHREAD_PLATFORM_KEYS_EXPORTABLE_ENABLE
 	help
