--- a/drivers/crypto/Kconfig
+++ b/drivers/crypto/Kconfig
@@ -24,8 +24,9 @@ source "subsys/logging/Kconfig.template.log_config"
 config CRYPTO_MBEDTLS_SHIM
 	bool "MbedTLS shim driver [EXPERIMENTAL]"
 	select MBEDTLS
+	select MBEDTLS_PSA_CRYPTO_C
+	select PSA_WANT_ALG_SHA_256
 	select MBEDTLS_ENABLE_HEAP
-	select MBEDTLS_SHA512
 	select MBEDTLS_CIPHER_AES_ENABLED
 	select EXPERIMENTAL
 	help
