--- a/subsys/mgmt/mcumgr/grp/fs_mgmt/CMakeLists.txt
+++ b/subsys/mgmt/mcumgr/grp/fs_mgmt/CMakeLists.txt
@@ -14,10 +14,8 @@ zephyr_library_sources_ifdef(CONFIG_MCUMGR_GRP_FS_CHECKSUM_HASH src/fs_mgmt_hash
 zephyr_library_sources_ifdef(CONFIG_MCUMGR_GRP_FS_CHECKSUM_IEEE_CRC32 src/fs_mgmt_hash_checksum_crc32.c)
 zephyr_library_sources_ifdef(CONFIG_MCUMGR_GRP_FS_HASH_SHA256 src/fs_mgmt_hash_checksum_sha256.c)
 
-if(CONFIG_MCUMGR_GRP_FS_CHECKSUM_HASH AND CONFIG_MCUMGR_GRP_FS_HASH_SHA256)
-  if(CONFIG_MBEDTLS_SHA256)
-    zephyr_library_link_libraries(mbedTLS)
-  endif()
+if(CONFIG_MCUMGR_GRP_FS_HASH_SHA256 AND NOT CONFIG_BUILD_WITH_TFM)
+  zephyr_library_link_libraries(mbedTLS)
 endif()
 
 zephyr_library_include_directories(include)
