--- a/tests/crypto/mbedtls_psa/prj.conf
+++ b/tests/crypto/mbedtls_psa/prj.conf
@@ -7,3 +7,4 @@ CONFIG_MBEDTLS_PSA_CRYPTO_C=y
 CONFIG_PSA_WANT_ALG_MD5=y
 CONFIG_PSA_WANT_ALG_SHA_1=y
 CONFIG_PSA_WANT_ALG_SHA_224=y
+CONFIG_PSA_WANT_ALG_SHA_256=y
