--- a/tests/crypto/mbedtls_psa/testcase.yaml
+++ b/tests/crypto/mbedtls_psa/testcase.yaml
@@ -27,6 +27,7 @@ common:
       - " PASS - test_md5.*"
       - " PASS - test_sha1.*"
       - " PASS - test_sha224.*"
+      - " PASS - test_sha256.*"
 tests:
   crypto.mbedtls_psa.with_entropy_driver:
     filter: CONFIG_CSPRNG_ENABLED
