--- a/tests/subsys/mgmt/mcumgr/all_options/prj.conf
+++ b/tests/subsys/mgmt/mcumgr/all_options/prj.conf
@@ -5,7 +5,8 @@
 #
 CONFIG_ZTEST=y
 CONFIG_MBEDTLS=y
-CONFIG_MBEDTLS_SHA256=y
+CONFIG_MBEDTLS_MBEDTLS_PSA_CRYPTO_C=y
+CONFIG_PSA_WANT_ALG_SHA_256=y
 CONFIG_FILE_SYSTEM=y
 CONFIG_BASE64=y
 CONFIG_NET_BUF=y
