modules: mbedtls: deprecate MBEDTLS_SHA384
- add Kconfig MBEDTLS_SHA384 to Kconfig.deprecated;
- replace CONFIG_MBEDTLS_SHA348 with CONFIG_PSA_WANT_ALG_SHA_384;
- add migration-guide note about this deprecation.

Signed-off-by: Valerio Setti <vsetti@baylibre.com>

--- a/samples/net/cloud/mqtt_azure/prj.conf
+++ b/samples/net/cloud/mqtt_azure/prj.conf
@@ -34,7 +34,7 @@ CONFIG_MBEDTLS_HEAP_SIZE=100000
 CONFIG_MBEDTLS_SSL_MAX_CONTENT_LEN=10240
 CONFIG_MBEDTLS_PEM_CERTIFICATE_FORMAT=y
 CONFIG_PSA_WANT_ALG_SHA_1=y
-CONFIG_MBEDTLS_SHA384=y
+CONFIG_PSA_WANT_ALG_SHA_384=y
 CONFIG_MBEDTLS_RSA_C=y
 CONFIG_MBEDTLS_PKCS1_V15=y
 CONFIG_MBEDTLS_PKCS1_V21=y
