--- a/modules/hostap/Kconfig
+++ b/modules/hostap/Kconfig
@@ -174,7 +174,7 @@ config WIFI_NM_WPA_SUPPLICANT_CRYPTO_ALT
 	select MBEDTLS_CIPHER_DES_ENABLED
 	select PSA_WANT_ALG_MD5
 	select PSA_WANT_ALG_SHA_1
-	select MBEDTLS_SHA384
+	select PSA_WANT_ALG_SHA_384
 	select MBEDTLS_ENTROPY_C
 	select MBEDTLS_CIPHER
 	select MBEDTLS_ECP_C
