--- a/tests/crypto/mbedtls_psa/testcase.yaml
+++ b/tests/crypto/mbedtls_psa/testcase.yaml
@@ -28,6 +28,7 @@ common:
       - " PASS - test_sha1.*"
       - " PASS - test_sha224.*"
       - " PASS - test_sha256.*"
+      - " PASS - test_sha384.*"
 tests:
   crypto.mbedtls_psa.with_entropy_driver:
     filter: CONFIG_CSPRNG_ENABLED
