MAINTAINERS: Add area for NVMEM
Create a section for the newly maintained NVMEM area.

Signed-off-by: Pieter De Gendt <pieter.degendt@basalte.be>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -3398,6 +3398,24 @@ NEORV32 platform:
   tests:
     - boards.neorv32
 
+NVMEM:
+  status: maintained
+  maintainers:
+    - pdgendt
+  collaborators:
+    - henrikbrixandersen
+  files:
+    - doc/services/nvmem/
+    - dts/bindings/nvmem/
+    - include/zephyr/devicetree/nvmem.h
+    - include/zephyr/nvmem.h
+    - subsys/nvmem/
+    - tests/subsys/nvmem/
+  labels:
+    - "area: NVMEM"
+  tests:
+    - nvmem
+
 NXP Platform Drivers:
   status: maintained
   maintainers:
