west.yml: hal_stm32: pull vc8000nanoe library
Pull hal_stm32 vc8000nanoe library.

Signed-off-by: Hugues Fruchet <hugues.fruchet@foss.st.com>

--- a/west.yml
+++ b/west.yml
@@ -250,7 +250,7 @@ manifest:
       groups:
         - hal
     - name: hal_stm32
-      revision: dc7c2543a079c57a4e7dbee54ed7877880dc235b
+      revision: pull/295/head
       path: modules/hal/stm32
       groups:
         - hal
