maintainers: add an area for dts bindings
Add an area to cover all bindings, at least to correctly label the PRs.

Signed-off-by: Anas Nashif <anas.nashif@intel.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1053,6 +1053,7 @@ Devicetree:
     - ^dts/bindings/[^,]+$
   files:
     - scripts/dts/
+    - dts/Kconfig
     - dts/common/
     - tests/lib/devicetree/
     - doc/build/dts/
@@ -1067,6 +1068,16 @@ Devicetree:
     - "area: Devicetree"
   tests:
     - libraries.devicetree
+
+Devicetree Bindings:
+  status: odd fixes
+  files-regex:
+    - ^dts/bindings/.*zephyr.*
+  files:
+    - dts/bindings/
+    - include/zephyr/dt-bindings/
+  labels:
+    - "area: Devicetree Bindings"
 
 Disk:
   status: maintained
