dts: arm: sifli: sf32lb52x: define RTC backup registers
Define RTC backup registers.

Signed-off-by: Gerard Marull-Paretas <gerard@teslabs.com>

--- a/dts/arm/sifli/sf32lb52x.dtsi
+++ b/dts/arm/sifli/sf32lb52x.dtsi
@@ -189,8 +189,17 @@
 		rtc: rtc@500cb000 {
 			compatible = "sifli,sf32lb-rtc";
 			reg = <0x500cb000 0x1000>;
+			ranges = <0x0 0x500cb000 0x1000>;
+			#address-cells = <1>;
+			#size-cells = <1>;
 			interrupts = <49 0>;
 			status = "disabled";
+
+			backup-registers@30 {
+				compatible = "sifli,sf32lb-rtc-backup";
+				reg = <0x30 0x28>;
+				status = "disabled";
+			};
 		};
 	};
 };
