drivers: rtc: microcrystal rv3032 driver introduced
Added new driver for Micro Crystal RV-3032-C7 Real-Time
Clock Module.

Signed-off-by: Dipak Shetty <shetty.dipak@gmx.com>

--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -62,6 +62,7 @@ source "drivers/rtc/Kconfig.pcf8563"
 source "drivers/rtc/Kconfig.rpi_pico"
 source "drivers/rtc/Kconfig.rts5912"
 source "drivers/rtc/Kconfig.rv3028"
+source "drivers/rtc/Kconfig.rv3032"
 source "drivers/rtc/Kconfig.rv8263"
 source "drivers/rtc/Kconfig.rv8803"
 source "drivers/rtc/Kconfig.rx8130ce"
