auxdisplay: Add MAX7219 in 7-segment mode
The driver add support for MX7219 operating in 8-character 7-segment mode.
'Code B' Font is supported only (without custom characters).

Signed-off-by: Maksim Salau <maksim.salau@gmail.com>

--- a/drivers/auxdisplay/Kconfig
+++ b/drivers/auxdisplay/Kconfig
@@ -24,6 +24,7 @@ source "drivers/auxdisplay/Kconfig.gpio"
 source "drivers/auxdisplay/Kconfig.hd44780"
 source "drivers/auxdisplay/Kconfig.itron"
 source "drivers/auxdisplay/Kconfig.jhd1313"
+source "drivers/auxdisplay/Kconfig.max7219"
 source "drivers/auxdisplay/Kconfig.pt6314"
 source "drivers/auxdisplay/Kconfig.serlcd"
 
