boards: amd: kv260_r5: Enable RTC node
Add support for RTC in kv260_r5. Update kv260_r5_defconfig to enable
RTC alarm and calibration support in the rtc_api test.

Signed-off-by: Balanakakamal V <balanakakamal.v@amd.com>
Signed-off-by: Harini T <harini.t@amd.com>

--- a/boards/amd/kv260_r5/kv260_r5.dts
+++ b/boards/amd/kv260_r5/kv260_r5.dts
@@ -28,6 +28,7 @@
 	aliases {
 		eeprom-0 = &eeprom0;
 		eeprom-1 = &eeprom1;
+		rtc = &rtc0;
 	};
 
 	i2c_ref_clk: i2c-ref-clk {
@@ -50,6 +51,11 @@
 
 &psgpio {
 	status = "okay";
+};
+
+&rtc0 {
+	status = "okay";
+	clock-frequency = <32767>;
 };
 
 &i2c1 {
