--- a/boards/amd/kv260_r5/kv260_r5_defconfig
+++ b/boards/amd/kv260_r5/kv260_r5_defconfig
@@ -17,5 +17,9 @@ CONFIG_UART_XLNX_PS=y
 CONFIG_I2C=y
 CONFIG_EEPROM=y
 
+# Enable ALARM, CALIBRATION
+CONFIG_RTC_ALARM=y
+CONFIG_RTC_CALIBRATION=y
+
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=1000
 CONFIG_ARM_MPU=y
