samples: i2s_codec: Refine sample for samll RAM platforms
- Configure BLOCK count by using kconfig option
'EXTRA_BLOCKS' instad of fixed value. This allows user to
customize the RAM usage based on their platform.
- Keep the PCM data in flash to avoid large RAM usage.
- Refine the sample to get the SAMPLE_BIT_WIDTH
and BYTES_PER_SAMPLE from Kconfig options.

Signed-off-by: Zhaoxiang Jin <Zhaoxiang.Jin_1@nxp.com>

--- a/samples/drivers/i2s/i2s_codec/Kconfig
+++ b/samples/drivers/i2s/i2s_codec/Kconfig
@@ -25,6 +25,24 @@ config USE_CODEC_CLOCK
 	  to generate those. If not selected, the I2S peripheral will generate
 	  them and the codec will be expected to consume them.
 
+config EXTRA_BLOCKS
+	int "Extra block size"
+	default 32
+	help
+	  Count of DMIC channels to capture and process.
+
+config SAMPLE_WIDTH
+	int "Sample bit width"
+	default 16
+	help
+	  Sample bit width of the system.
+
+config BYTES_PER_SAMPLE
+	int "Bytes per sample"
+	default 2
+	help
+	  Bytes per sample of the system.
+
 config USE_DMIC
 	bool "Use DMIC as an audio input"
 
