drivers: display: Add display support for PCD8544 LCD display controller.
Add new display driver and dts binding for PCD8555
LCD display controller.

Signed-off-by: Quentin LACOMBE <quentlace2g@gmail.com>

--- a/drivers/display/Kconfig
+++ b/drivers/display/Kconfig
@@ -25,6 +25,7 @@ source "drivers/display/Kconfig.microbit"
 source "drivers/display/Kconfig.nrf_led_matrix"
 source "drivers/display/Kconfig.ili9xxx"
 source "drivers/display/Kconfig.ist3931"
+source "drivers/display/Kconfig.pcd8544"
 source "drivers/display/Kconfig.sdl"
 source "drivers/display/Kconfig.sh1122"
 source "drivers/display/Kconfig.ssd1306"
