cmake: toolchain: add support for Andes GCC and Clang
Add support for the Andes GCC / Andes Clang toolchains.
Enable by setting:
- ZEPHYR_TOOLCHAIN_VARIANT=[andes|andes-clang]
- ANDES_TOOLCHAIN_PATH=/path/to/nds32le-elf-newlib-v5

Detect Andes toolchain name using matching:
  nds[32|64]le-elf-[newlib|mculib]-[v5|v5e|v5f|v5d]

Where ISA=nds[32|64]le, libc=[newlib|mculib], ISA/ABI=[v5|v5e|v5f|v5d].

Signed-off-by: Jimmy Zheng <jimmyzhe@andestech.com>

--- a/arch/riscv/custom/andes/Kconfig
+++ b/arch/riscv/custom/andes/Kconfig
@@ -10,7 +10,9 @@ config RISCV_CUSTOM_CSR_ANDES_EXECIT
 	bool "Andes V5 EXEC.IT extension"
 	depends on CPU_HAS_ANDES_EXECIT
 	depends on RISCV_ISA_EXT_C
-	depends on !RISCV_GENERIC_TOOLCHAIN
+	depends on "$(ZEPHYR_TOOLCHAIN_VARIANT)" = "andes" || \
+		"$(ZEPHYR_TOOLCHAIN_VARIANT)" = "andes-clang" || \
+		"$(ZEPHYR_TOOLCHAIN_VARIANT)" = "cross-compile"
 	depends on !LINKER_USE_NO_RELAX
 	help
 	  The EXEC.IT extension (Execution on Instruction Table) generate
@@ -32,7 +34,9 @@ config CPU_HAS_ANDES_HWDSP
 config RISCV_CUSTOM_CSR_ANDES_HWDSP
 	bool "AndeStar V5 DSP ISA"
 	depends on CPU_HAS_ANDES_HWDSP
-	depends on !RISCV_GENERIC_TOOLCHAIN
+	depends on "$(ZEPHYR_TOOLCHAIN_VARIANT)" = "andes" || \
+		"$(ZEPHYR_TOOLCHAIN_VARIANT)" = "andes-clang" || \
+		"$(ZEPHYR_TOOLCHAIN_VARIANT)" = "cross-compile"
 	help
 	  This option enables the AndeStar v5 hardware DSP, in order to
 	  support using the DSP instructions.
